--- a/MakeupStore/src/main/resources/templates/addproduct.html
+++ b/MakeupStore/src/main/resources/templates/addproduct.html
@@ -3,6 +3,7 @@
 <head>
     <title>Product List</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}"/>
 </head>
 <body>
 	<h1>Add product</h1>
