--- a/MakeupStore/src/main/resources/templates/shoppingcart.html
+++ b/MakeupStore/src/main/resources/templates/shoppingcart.html
@@ -3,7 +3,7 @@
 <head>
     <title>Product list</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}"/>
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{../css/bootstrap.min.css}"/>
 </head>
 <body>
 	<div class="col-md-4">
@@ -40,5 +40,6 @@
      <p th:text="${totalprice}"></p>
      
      <a href="/productlist" class="btn btn-success">Continue shopping</a>
+     
 </body>
 </html>
